fix(Canvas): Avoid flickering in @patternfly/react-topology
When rendering the graph, we can see some flickering in a few
situations:

1. The app is loaded for the first time or refreshed
2. Switching between no routes in the canvas and a adding a route
3. Navigating to a pages and go backto the design page
4. Disabling and enabling steps in the canvas
5. Switching the layout between horizontal and vertical

The fix for those situations is:
1. Adding an `initialized` state to

--- a/packages/ui/src/components/Visualization/Visualization.scss
+++ b/packages/ui/src/components/Visualization/Visualization.scss
@@ -6,8 +6,3 @@
     border-radius: 15px;
   }
 }
-
-// Override for the default patternfly class
-.pf-v5-u-m-sm {
-  margin: var(--pf-v5-global--spacer--sm);
-}
